Added files to online repo

--- a/starter-code/add-content.html
+++ b/starter-code/add-content.html
@@ -6,8 +6,9 @@
 </head>
     <body>
         <h1>Contructive &amp; Co.</h1>
-        <script>document.write('<h3>Welcome!</h3>');
-        </script>
+        <script src="js/ask-name.js"></script>
+        <script>document.write('<h3>Welcome!</h3>');</script>
+        <script src="js/ask-preference.js"></script>
         <p>For all orders and inquiries please call
             <em>555-3344</em></p>
     </body>
